// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogBoxInspectorFooter should render no buttons and a message for syntax error 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(51, 51, 51, 1)",
      "flexDirection": "row",
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": -2,
        "width": 0,
      },
      "shadowOpacity": 0.5,
      "shadowRadius": 2,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgba(255, 255, 255, 0.6)",
          "fontSize": 14,
          "fontStyle": "italic",
          "height": 48,
          "lineHeight": 20,
          "paddingBottom": 50,
          "paddingTop": 20,
          "textAlign": "center",
          "width": "100%",
        }
      }
    >
      This error cannot be dismissed.
    </Text>
  </View>
</View>
`;

exports[`LogBoxInspectorFooter should render two buttons for error 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(51, 51, 51, 1)",
      "flexDirection": "row",
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": -2,
        "width": 0,
      },
      "shadowOpacity": 0.5,
      "shadowRadius": 2,
    }
  }
>
  <FooterButton
    onPress={[Function]}
    text="Dismiss"
  />
  <FooterButton
    onPress={[Function]}
    text="Minimize"
  />
</View>
`;

exports[`LogBoxInspectorFooter should render two buttons for fatal 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(51, 51, 51, 1)",
      "flexDirection": "row",
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": -2,
        "width": 0,
      },
      "shadowOpacity": 0.5,
      "shadowRadius": 2,
    }
  }
>
  <FooterButton
    onPress={[Function]}
    text="Dismiss"
  />
  <FooterButton
    onPress={[Function]}
    text="Minimize"
  />
</View>
`;

exports[`LogBoxInspectorFooter should render two buttons for warning 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(51, 51, 51, 1)",
      "flexDirection": "row",
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": -2,
        "width": 0,
      },
      "shadowOpacity": 0.5,
      "shadowRadius": 2,
    }
  }
>
  <FooterButton
    onPress={[Function]}
    text="Dismiss"
  />
  <FooterButton
    onPress={[Function]}
    text="Minimize"
  />
</View>
`;
